log/build_2024-05-04_18-40-32/doozy_forklift/stderr.log
  File "/home/avinaash/ForkLift_AMR/install/doozy_forklift/lib/python3.8/site-packages/doozy_forklift/dock_with_pallet_01.py", line 87
    return SetBool.Response().message = 'Failed'
                                      ^
SyntaxError: invalid syntax

